source/_sass/base.scss
/* ... */
section, article, nav, aside {
  &:target {
    h1, h2, h3, h4, h5, h6 {
      .header-anchor {
        opacity: 1;
      }
    }
  }
}

.header-anchor:focus {
  opacity: 1;
}

.recent-posts {
  margin: 0 1em;
}

footer {
  border-top: 1px dashed $ui-color;
  margin: 1.618em 0.618em 0;
  padding: 0.618em 0.382em;
  > p {
    margin-top: 0;
    margin-bottom: 0;
  }
}

aside {
  margin: 0.618em 0 1em;
}
.note {
  border: 1px dashed $ui-color;
  padding: 0.382em 0.618em 0.382em 4.854em;
}
.note::before {
  content: 'NOTE';
  font-weight: 500;
  font-size: 1rem;
  font-family: $font-emph;
  margin-left: -4.236em;
  float: left;
}

//
//        _|
//    _|_|_|    _|_|      _|_|_|    _|_|    _|  _|_|
//  _|    _|  _|_|_|_|  _|        _|    _|  _|_|
//  _|    _|  _|        _|        _|    _|  _|
//    _|_|_|    _|_|_|    _|_|_|    _|_|    _|
//
//

body > header {
  background-color: $accent-color;
  color: $bg-color;
  > h1 > a > img {
    transition: 180ms ease;
  }
  a:link, a:visited {
    color: $bg-color;
    border-color: $bg-color;
    &:hover,
    &.hover-like {
      background-color: $bg-color;
      color: $accent-color;
    }
  }
}

.scroll-indicator {
  background-color: $accent-color;
}

mark {
  background-color: rgba(gold, 0.8);
  color: inherit;
}

//
//    _|                _|        _|
//  _|_|_|_|    _|_|_|  _|_|_|    _|    _|_|
//    _|      _|    _|  _|    _|  _|  _|_|_|_|
//    _|      _|    _|  _|    _|  _|  _|
//      _|_|    _|_|_|  _|_|_|    _|    _|_|_|
//
//

table {
  margin: 0.618em auto 1.618em;
  border-collapse: collapse;
  th, td {
    white-space: nowrap;
    padding: 0.382em 0.618em;
    border: 1px dashed $ui-color;
  }
}

//
//  _|  _|              _|
//  _|        _|_|_|  _|_|_|_|
//  _|  _|  _|_|        _|
//  _|  _|      _|_|    _|
//  _|  _|  _|_|_|        _|_|
//
//

ol {
  display: table;
  padding-left: 0;
  list-style: none;
  counter-reset: i;
  > li {
    display: table-row;
    &::before {
      counter-increment: i;
      content: counters(i, '.') '. ';
      font-family: $font-emph;
      font-weight: 500;
      display: table-cell;
      min-width: 1.618em;
      text-align: right;
      white-space: pre;
    }
    &:lang(ja)::before {
      font-family: $font-emph-ja;
    }
  }
}
ul {
  padding-left: 1.618em;
}
dt {
  margin-top: 0.618em;
}
dd {
  margin-left: 0;
  text-indent: 1.618em;
}
li > p,
dd > p {
  margin-top: 0;
  margin-bottom: 0;
}

//
//  _|                    _|
//  _|  _|      _|_|_|  _|_|_|_|    _|_|    _|    _|
//  _|_|      _|    _|    _|      _|_|_|_|    _|_|
//  _|  _|    _|    _|    _|      _|        _|    _|
//  _|    _|    _|_|_|      _|_|    _|_|_|  _|    _|
//
//

.katex {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;

  math > semantics > annotation[encoding="application/x-tex"] {
    -webkit-user-select: text;
       -moz-user-select: text;
        -ms-user-select: text;
            user-select: text;
  }
}

//
//      _|_|_|_|_|                                    _|  _|
//    _|          _|  _|_|_|  _|_|      _|_|      _|_|_|        _|_|_|
//  _|    _|_|_|  _|  _|    _|    _|  _|_|_|_|  _|    _|  _|  _|    _|
//  _|  _|    _|  _|  _|    _|    _|  _|        _|    _|  _|  _|    _|
//  _|    _|_|_|_|    _|    _|    _|    _|_|_|    _|_|_|  _|    _|_|_|
//    _|
//      _|_|_|_|_|_|

@media screen and (orientation: portrait) and (max-width: 1000px) {
  html {
    font-size: unquote(calc(12px + 0.6vw));
  }
}

@media screen and (orientation: landscape) and (max-height: 1000px) {
  html {
    font-size: unquote(calc(12px + 0.6vh));
  }
}

@media screen and (max-width: 999.984375px) {
  html {
    text-align: left;
    text-align: start;
  }
}

@media screen and (max-width: 1332.984375px) {
  .flexible-wrapper {
    max-width: 1000px;
  }

  // NOTE: ad hoc solution
  .side-column > nav:last-child {
    margin-bottom: 2.618em;
  }

  .side-column:not(:has(nav)) {
    margin-bottom: 2.618em;
  }
}

@media screen and (min-width: 1333px) {
  .flexible-wrapper {
    display: flex;
    flex-direction: row-reverse;
  }

  .main-column {
    flex-basis: 1000px;
    flex-grow: 1;
  }

  .side-column {
    flex-shrink: 0;
    flex-basis: 333px;
    height: -moz-fit-content;
    height:      fit-content;
    max-height: 100vh;
    position: sticky;
    top: 0;
    overflow-y: auto;
  }
}

